Fix chex3odx file size.

--- a/downloads/index.html
+++ b/downloads/index.html
@@ -108,7 +108,7 @@
 			<p class="paragraph0">Existing Chex&trade; Quest 3 mods will also probably not be compatible with this port, though a layer of cross-compatibility was designed in the infrastructure so you can make something like a level pack with the base monsters, and it can be compatible with both the primary CQ3 as well as the ODAMEX/ZDaemon version. All <a href="https://zdoom.org/wiki/Standard_editor_numbers">standard editor numbers</a> are identical, and all patches, textures and flats carry over, which make this possible.</p>
 			<p class="paragraph0">chex3odx.wad is cross-compatible with both source ports &#8212; one WAD for both.</p>
 			<hr>
-			<p class="paragraph0"><a href="chex3odx-rc4.zip">chex3odx-rc4.wad (pre-release, not final)</a> 112 KB</p>
+			<p class="paragraph0"><a href="chex3odx-rc4.zip">chex3odx-rc4.wad (pre-release, not final)</a> 6.41 MB</p>
 		</div>
 		<div class="main">
 			<p class="paragraph0"><a id="Archived_Chex_Quest_3_Versions">ARCHIVED CHEX&trade; QUEST 3 VERSIONS</a></p>
