Add new chex3.wad archives to front page.

--- a/downloads/index.html
+++ b/downloads/index.html
@@ -150,7 +150,11 @@
 				<li><a href="https://www.chexmix.com/chexquest3/">Mirror | chexmix.com (ChexQuest3.zip)</a></li>
 				<li><a href="http://www.chucktropolis.com/gamers.htm">Mirror | chucktropolis.com (ChexQuest3.zip)</a></li>
 				<li><a href="https://archive.org/details/ChexQuest3_1020">Mirror | archive.org (ChexQuest3.zip)</a></li>
-				<li>As posted on <a href="https://chexquest.org/index.php?topic=1664.msg86012#msg86012">JUN 25, 2009</li>
+				<li>As posted on <a href="https://chexquest.org/index.php?topic=1664.msg86012#msg86012">JUN 25, 2009</a></li>
+			</ul>
+			<p class="paragraph0">All-in-One Download</p>
+			<ul>
+				<li><a href="http://www.xboltz.net/stuff/cq3archive.zip">Mirror | The Page of Xbolt (cq3archive.zip)</a></li>
 			</ul>
 			<p class="paragraph0"><a href="chex3_zdoom.zip">chex3_zdoom.zip (v1.4 source code)</a> 53.3 MB</p>
 		</div>
